--- a/PORTFOLIO_PROJECT/CSS/portfolio_C.css
+++ b/PORTFOLIO_PROJECT/CSS/portfolio_C.css
@@ -265,7 +265,7 @@ h1, h2, h3, hr, footer, p{ color: white;}
   display:flex;
   flex-flow: row wrap;
   
-  margin-top:-60px;
+  margin-top:-30px;
   width:fit-content;
   padding: 20px 0;
   height : 100%;
@@ -289,6 +289,28 @@ Art modals
 }
 
 .Art-photos input:hover{
-  transform: scale(1.05, 1.05);
+  transform: scale(1.1, 1.1);
+}
 
+.modal-link-buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Showlink-button{
+  display: inline-block;
+
+  text-align:left;
+  color:white;
+  text-decoration: none;
+  padding:0px 20px;
+  width:100px;
+  margin:0 5%;
+  box-shadow: 4px 4px var(--nav_bg_color_active), -4px -4px var(--nav_bg_color_active)
+  ,4px -4px var(--nav_bg_color_active),  -4px 4px var(--nav_bg_color_active);
+}
+
+.Showlink-button:hover{
+  transform: scale(1.05, 1.05);
 }
