--- a/PORTFOLIO_PROJECT/CSS/portfolio_C.css
+++ b/PORTFOLIO_PROJECT/CSS/portfolio_C.css
@@ -81,6 +81,19 @@ h1, h2, h3, hr, footer, p{ color: white;}
 
 
 
+.titlediv{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+   margin: 0 auto;
+  display:flex;
+  flex-flow: row wrap;
+  
+  margin-top:-10px;
+  width:fit-content;
+  padding: 20px 0;
+  height : 100%;
+}
 
 
 
@@ -257,6 +270,53 @@ h1, h2, h3, hr, footer, p{ color: white;}
   color:white;
 }
 
+
+
+.Games{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+   margin: 0 auto;
+  display:flex;
+  flex-flow: row wrap;
+  
+  margin-top:-30px;
+  width:fit-content;
+  padding: 20px 0;
+  height : 100%;
+}
+
+
+.Games input{
+  width:100%; 
+  height:100%;
+  color:white;
+  
+  box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
+  ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
+  
+} 
+
+.Games div{
+  padding:20px 40px;
+  width:auto;
+}
+
+.Games input:hover{
+  animation-duration: 0.25s;
+  animation-name: gamehover;
+  animation-fill-mode: forwards;
+}
+
+@keyframes gamehover {
+  0% { transform: scale(1, 1); }
+  100%{ transform: scale(1.1, 1.1); }
+}
+
+/*
+Art photos
+*/
+
 .Art-photos {
   justify-content: center;
   align-items: center;
@@ -289,7 +349,9 @@ Art modals
 }
 
 .Art-photos input:hover{
-  transform: scale(1.1, 1.1);
+  animation-duration: 0.25s;
+  animation-name: gamehover;
+  animation-fill-mode: forwards;
 }
 
 .modal-link-buttons{
