--- a/PORTFOLIO_PROJECT/CSS/portfolio_C.css
+++ b/PORTFOLIO_PROJECT/CSS/portfolio_C.css
@@ -1,5 +1,3 @@
-
-
 html {
     scroll-behavior:smooth;
 }
@@ -20,12 +18,7 @@ main {
    --ng-invert1: 0;
 }
 
-
-
 h1, h2, h3, hr, footer, p{ color: white;}
-
-
-
 
 /*Top navigation bar*/
 #home {
@@ -34,23 +27,20 @@ h1, h2, h3, hr, footer, p{ color: white;}
 }
 
 .topnav {
- 
   position: fixed;
-  text-align: center;
-    top: 0;
-    left: 0;
-    z-index: 999;
-    width: 100%;
-    height: 86px;
-    
- 
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 86px;
   background-color: var(--nav_bg_color);
   box-shadow: 0px var(--border-width) var(--nav_bg_color_selected);
-}
-
-.topnav a.active {
-  background-color: var(--nav_bg_color_selected);
-  color: var(--nav_txt_color_active);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+   margin: 0 auto;
+  display:flex;
+  flex-flow: row wrap;
 }
 
 /*Display an icon when the screen is too small*/
@@ -62,23 +52,30 @@ h1, h2, h3, hr, footer, p{ color: white;}
 /*The a element of the top nav*/
 .topnav a {
   color: var(--nav_txt_color);
+  background-color: rgba(0,0,0,0);
   text-align: center;
   position:relative;
-  
-  padding: 28px 32px;
+  padding: 28px 25px;
+  width:auto;
   text-decoration: none;
-  top:26px;
-  font-size: 34px;
 
-  
+  font-size: 34px; 
+  transition: 0.3s;
 }
+
+.topnav a.active {
+  background-color: var(--nav_bg_color_selected);
+  color: var(--nav_txt_color_active);
+}
+
+
+
+
 
 .topnav a:hover {
-  animation-duration: 0.25s;
-  animation-name: top-button;
-  animation-fill-mode: forwards;
+  background-color:var(--nav_bg_color_active);
+  color:black;
 }
-
 
 
 .titlediv{
@@ -88,14 +85,11 @@ h1, h2, h3, hr, footer, p{ color: white;}
    margin: 0 auto;
   display:flex;
   flex-flow: row wrap;
-  
   margin-top:-10px;
   width:fit-content;
   padding: 20px 0;
   height : 100%;
 }
-
-
 
 /*Socials tab with small links*/
 .social-tab {
@@ -103,41 +97,35 @@ h1, h2, h3, hr, footer, p{ color: white;}
   box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
   ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
   height:100px;  
-
   justify-content: center;
   align-items: center;
   text-align: center;
    margin: 0 auto;
   display:flex;
   width:fit-content;
-  
   margin-top: 40px;
-
 }
 
 .social-tab a {
   color:white;
-  
+  background-color: rgba(0,0,0,0);
   text-decoration: none;
   font-size: 240%;
   padding: 32px 38px;
-
   top:0px;
+  transition: 0.3s;
 }
-
 
 .social-tab a:hover {
-  animation-duration: 0.25s;
-  animation-name: top-button;
-  animation-fill-mode: forwards;
+  background-color:var(--nav_bg_color_active);
+  color:black;
 }
 
-.linktab {
 
+.linktab {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
-
 }
 
 /*Tankman icon logic*/
@@ -149,27 +137,11 @@ h1, h2, h3, hr, footer, p{ color: white;}
   display: inline-block;
 }
 
-
 /*Games*/
 .Games-tab {
-
   margin-top:60px;
-
 }
 
-/*Smoothly change the nav button colors*/
-
-@keyframes top-button {
-  from {
-    background-color: rgba(0,0,0,0);
-    color: var(--nav_txt_color);
-  }
-  
-  to{
-    background-color: var(--nav_bg_color_active);
-    color: var(--nav_txt_color_active);
-  }
-}
 
 #horiz_title {
     animation: wave-width 4s infinite  ;
@@ -186,13 +158,9 @@ h1, h2, h3, hr, footer, p{ color: white;}
   }
 }
 
-
-
-
 .yellowtext{
   color: var(--nav_bg_color_active);
 }
-
 
 /*Code for the side bars*/
 #sidebars-left{
@@ -219,7 +187,6 @@ h1, h2, h3, hr, footer, p{ color: white;}
   left:0%;
 }
 
-
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
@@ -242,15 +209,11 @@ h1, h2, h3, hr, footer, p{ color: white;}
   }
 }
 
-
-
-
+/*Modal*/
 .modal-content{
-
   background-color: var(--nav_bg_color); 
   box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
       ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
-
 }
 
 .modal-content hr{
@@ -270,8 +233,13 @@ h1, h2, h3, hr, footer, p{ color: white;}
   color:white;
 }
 
+.modal-link-buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-
+/*Games*/
 .Games{
   justify-content: center;
   align-items: center;
@@ -286,37 +254,26 @@ h1, h2, h3, hr, footer, p{ color: white;}
   height : 100%;
 }
 
-
-.Games input{
-  width:100%; 
-  height:100%;
-  color:white;
-  
-  box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
-  ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
-  
-} 
-
 .Games div{
   padding:20px 40px;
   width:auto;
 }
 
+.Games input{
+  width:100%; 
+  height:100%;
+  color:white;
+  box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
+  ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
+  transition: all .1s ease-in-out;
+} 
+
 .Games input:hover{
-  animation-duration: 0.25s;
-  animation-name: gamehover;
-  animation-fill-mode: forwards;
+  transform: scale(1.1);
 }
 
-@keyframes gamehover {
-  0% { transform: scale(1, 1); }
-  100%{ transform: scale(1.1, 1.1); }
-}
 
-/*
-Art photos
-*/
-
+/*Art photos*/
 .Art-photos {
   justify-content: center;
   align-items: center;
@@ -324,7 +281,6 @@ Art photos
    margin: 0 auto;
   display:flex;
   flex-flow: row wrap;
-  
   margin-top:-30px;
   width:fit-content;
   padding: 20px 0;
@@ -335,34 +291,22 @@ Art photos
   width:auto;
 }
 
-/*
-Art modals
-*/
 .Art-photos input{
   width:170px;
   height:170px;
   color:white;
-
   margin-top:12px;
   box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
   ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
+  transition: all .02s ease-in-out;
 }
 
 .Art-photos input:hover{
-  animation-duration: 0.25s;
-  animation-name: gamehover;
-  animation-fill-mode: forwards;
-}
-
-.modal-link-buttons{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  transform: scale(1.1);
 }
 
 .Showlink-button{
   display: inline-block;
-
   text-align:left;
   color:white;
   text-decoration: none;
