--- a/PORTFOLIO_PROJECT/CSS/portfolio_C.css
+++ b/PORTFOLIO_PROJECT/CSS/portfolio_C.css
@@ -26,6 +26,25 @@ h1, h2, h3, hr, footer, p{ color: white;}
   z-index: 100;
 }
 
+#title-logo{
+  margin-left:20px; width:15%;  box-shadow: 5px 5px var(--nav_bg_color_active), -5px -5px var(--nav_bg_color_active)
+      ,5px -5px var(--nav_bg_color_active),  -5px 5px var(--nav_bg_color_active);
+}
+
+#title-logo:hover{
+  animation: titleshake 0.5s;
+  animation-iteration-count: foward;
+}
+
+@keyframes titleshake {
+  0% { transform:  rotate(0deg); }
+  20% { transform:  rotate(-5deg); }
+  40% { transform: rotate(0deg); }
+  60% { transform:  rotate(5deg); }
+  100% { transform: rotate(0deg); }
+}
+
+
 .topnav {
   position: fixed;
   top: 0;
@@ -269,7 +288,7 @@ h1, h2, h3, hr, footer, p{ color: white;}
 } 
 
 .Games input:hover{
-  transform: scale(1.1);
+  transform: scale(1.1) ;
 }
 
 
@@ -285,6 +304,8 @@ h1, h2, h3, hr, footer, p{ color: white;}
   width:fit-content;
   padding: 20px 0;
   height : 100%;
+
+ 
 }
 
 .Art-photos div {
@@ -298,11 +319,14 @@ h1, h2, h3, hr, footer, p{ color: white;}
   margin-top:12px;
   box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
   ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
+
   transition: all .02s ease-in-out;
 }
 
 .Art-photos input:hover{
-  transform: scale(1.1);
+ 
+  transform: rotate(10deg);
+  transform: scale(1.2) rotate(5deg);
 }
 
 .Showlink-button{
