--- a/PORTFOLIO_PROJECT/CSS/portfolio_C.css
+++ b/PORTFOLIO_PROJECT/CSS/portfolio_C.css
@@ -77,7 +77,7 @@ h1, h2, h3, hr, footer, p{ color: white;}
   padding: 28px 25px;
   width:auto;
   text-decoration: none;
-
+  margin-top: -2px;
   font-size: 34px; 
   transition: 0.3s;
 }
@@ -284,7 +284,7 @@ h1, h2, h3, hr, footer, p{ color: white;}
   color:white;
   box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
   ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
-  transition: all .1s ease-in-out;
+  transition: all .1s cubic-bezier(0.7,-0.01, 0.29, 0.98);
 } 
 
 .Games input:hover{
@@ -336,6 +336,7 @@ h1, h2, h3, hr, footer, p{ color: white;}
   text-decoration: none;
   padding:0px 20px;
   width:100px;
+  max-width:max-content;
   margin:0 5%;
   box-shadow: 4px 4px var(--nav_bg_color_active), -4px -4px var(--nav_bg_color_active)
   ,4px -4px var(--nav_bg_color_active),  -4px 4px var(--nav_bg_color_active);
@@ -343,4 +344,27 @@ h1, h2, h3, hr, footer, p{ color: white;}
 
 .Showlink-button:hover{
   transform: scale(1.05, 1.05);
+}
+
+.Tasks-div{
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+   margin: 0 auto;
+  display:flex;
+  flex-flow: row wrap;
+
+}
+
+.Task-button{
+  display: inline-block;
+  text-align:left;
+  color:white;
+  text-decoration: none;
+  padding:0px 8px;
+  width:max-content;
+  margin:0 5%;
+  box-shadow: 2px 2px var(--nav_bg_color_active), -2px -2px var(--nav_bg_color_active)
+  ,2px -2px var(--nav_bg_color_active),  -2px 2px var(--nav_bg_color_active);
 }
