--- a/PORTFOLIO_PROJECT/CSS/portfolio_C.css
+++ b/PORTFOLIO_PROJECT/CSS/portfolio_C.css
@@ -11,6 +11,8 @@ main {
    --nav_bg_color: #333;
    --nav_bg_color_active: #f0d909; /*rgb(233, 233, 233);*/
    --nav_bg_color_selected: #f0d909;
+   /* --nav_bg_color_selected: #09f056; /*Halloween colors*/
+   /* --nav_bg_color_active: #09f056;   /*Halloween colors*/
    --nav_txt_color: white;
    --nav_txt_color_active: black;
    --border-width: 7px;
@@ -27,9 +29,10 @@ h1, h2, h3, hr, footer, p{ color: white;}
 }
 
 #title-logo{
-  margin-left:20px; width:15%;  box-shadow: 5px 5px var(--nav_bg_color_active), -5px -5px var(--nav_bg_color_active)
+  width:200px; margin-left:20px;   box-shadow: 5px 5px var(--nav_bg_color_active), -5px -5px var(--nav_bg_color_active)
       ,5px -5px var(--nav_bg_color_active),  -5px 5px var(--nav_bg_color_active);
 }
+
 
 #title-logo:hover{
   animation: titleshake 0.5s;
@@ -51,7 +54,7 @@ h1, h2, h3, hr, footer, p{ color: white;}
   left: 0;
   z-index: 999;
   width: 100%;
-  height: 86px;
+  height: min-content;
   background-color: var(--nav_bg_color);
   box-shadow: 0px var(--border-width) var(--nav_bg_color_selected);
   justify-content: center;
@@ -110,6 +113,18 @@ h1, h2, h3, hr, footer, p{ color: white;}
   height : 100%;
 }
 
+#desc-tab{
+  display: flex;
+  overflow:auto;
+}
+
+#festive-logo {
+  position: fixed;
+  left: 0;
+  z-index: 999;
+  width:20%;
+}
+
 /*Socials tab with small links*/
 .social-tab {
   background-color: var(--nav_bg_color); 
@@ -121,7 +136,7 @@ h1, h2, h3, hr, footer, p{ color: white;}
   text-align: center;
    margin: 0 auto;
   display:flex;
-  width:fit-content;
+  width:max-content;
   margin-top: 40px;
 }
 
@@ -170,10 +185,10 @@ h1, h2, h3, hr, footer, p{ color: white;}
 
 @keyframes wave-width {
   0%, 100% {
-    width:60%;
+    width:70%;
   }
   50% {
-    width:68%;
+    width:78%;
   }
 }
 
@@ -300,7 +315,7 @@ h1, h2, h3, hr, footer, p{ color: white;}
    margin: 0 auto;
   display:flex;
   flex-flow: row wrap;
-  margin-top:-30px;
+  margin-top:-10px;
   width:fit-content;
   padding: 20px 0;
   height : 100%;
@@ -313,8 +328,8 @@ h1, h2, h3, hr, footer, p{ color: white;}
 }
 
 .Art-photos input{
-  width:170px;
-  height:170px;
+  width:155px;
+  height:155px;
   color:white;
   margin-top:12px;
   box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
@@ -329,14 +344,57 @@ h1, h2, h3, hr, footer, p{ color: white;}
   transform: scale(1.2) rotate(5deg);
 }
 
+/*Music covers*/
+.Music-photos {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+   margin: 0 auto;
+  display:flex;
+  flex-flow: row wrap;
+  margin-top:-40px;
+  width:fit-content;
+  padding: 10px 90px;
+  height : 100%;
+  
+ 
+}
+
+.Music-photos div {
+  width:auto;
+  padding: 10px 30px;
+  margin-bottom: 10px;
+}
+
+.Music-photos input{
+  width:300px;
+  height:300px;
+  color:white;
+  margin-top:12px;
+  box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
+  ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
+
+  transition: all .02s ease-in-out;
+}
+
+.Music-photos input:hover{
+ 
+  transform: rotate(5deg);
+  transform: scale(1.1) rotate(2.5deg);
+}
+
+
+/*Showlink buttons*/
 .Showlink-button{
   display: inline-block;
   text-align:left;
   color:white;
   text-decoration: none;
-  padding:0px 20px;
+  padding:0px 30px;
   width:100px;
   max-width:max-content;
+  height:100%;
+  
   margin:0 5%;
   box-shadow: 4px 4px var(--nav_bg_color_active), -4px -4px var(--nav_bg_color_active)
   ,4px -4px var(--nav_bg_color_active),  -4px 4px var(--nav_bg_color_active);
@@ -367,4 +425,22 @@ h1, h2, h3, hr, footer, p{ color: white;}
   margin:0 5%;
   box-shadow: 2px 2px var(--nav_bg_color_active), -2px -2px var(--nav_bg_color_active)
   ,2px -2px var(--nav_bg_color_active),  -2px 2px var(--nav_bg_color_active);
+}
+
+#Music-player:hover{
+  cursor: pointer;
+}
+
+.Music-button{
+  cursor: pointer;
+  width:100px;
+}
+
+#circle{
+  border: red;
+    background-color: var(--nav_bg_color_active);
+    height: 100px;
+    -moz-border-radius:75px;
+    -webkit-border-radius: 75px;
+    width: 100px;
 }
