--- a/CSS/portfolio_C.css
+++ b/CSS/portfolio_C.css
@@ -22,11 +22,15 @@ body {
 font-family: Arial, Helvetica, sans-serif;
       background-color: black;
       background-color:rgb(18, 2, 66);
-      background-image: linear-gradient(rgba(51, 6, 71, 0.6) 10%,rgba(85, 10, 117, 1) 120%), url('ASSETS/bkg.png');
+  
       background-size:cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: top;
+
+      background-image: url('ASSETS/bkg.png');
+      background-image: radial-gradient(circle, rgba(85,10,117,0) 0%, rgba(51,6,71,0) 100%),url('ASSETS/bkg.png');
+
 }
 @media all and (min-width:1024px) { #container { width: 1000px; } }
 @media all and (min-width:1280px) { #container { width: 1256px; } }
