--- a/CSS/portfolio_C.css
+++ b/CSS/portfolio_C.css
@@ -7,10 +7,12 @@ position: relative;
 }
 
 .HeaderText{
+
 font-family: 'Permanent Marker';
 background: -webkit-linear-gradient(rgb(255, 255, 255), var(--nav_bg_color_active));
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
+
 }
 
 #container {
@@ -22,15 +24,11 @@ body {
 font-family: Arial, Helvetica, sans-serif;
       background-color: black;
       background-color:rgb(18, 2, 66);
-  
+      background-image: linear-gradient(rgba(51, 6, 71, 0.6) 10%,rgba(85, 10, 117, 1) 120%), url('/ASSETS/bkg.png');
       background-size:cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: top;
-
-      background-image: url('ASSETS/bkg.png');
-      background-image: radial-gradient(circle, rgba(85,10,117,0) 0%, rgba(51,6,71,0) 100%),url('ASSETS/bkg.png');
-
 }
 @media all and (min-width:1024px) { #container { width: 1000px; } }
 @media all and (min-width:1280px) { #container { width: 1256px; } }
@@ -49,27 +47,8 @@ font-family: Arial, Helvetica, sans-serif;
 
 h1, h2, h3, hr, footer, p, ul, li, img{ color: white;}
 
-ul {
-list-style: none; /* Remove default bullets */
-}
 
-li::before {
-background-image:url("ASSETS/MISC/li.png");
 
-content: "";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-color: white; /* Change the color */
-font-weight: bold; /* If you want it to be bold */
-/* Needed to add space between the bullet and the text */
-/* Also needed for space (tweak if needed) */
-}
-
-li{
-background-size: 10px;  
-background-repeat: no-repeat;
-background-position: 0px 5px;
-padding-left: 1em;
-margin: 15px 0;
-}
 
 @media screen and (min-width: 1199px) {
 
@@ -87,7 +66,6 @@ width:200px; margin-left:20px;   box-shadow: 5px 5px var(--nav_bg_color_active),
 
 
 #title-logo:hover{
-animation: titleshake 0.5s;
 animation-iteration-count: foward;
 }
 
@@ -371,22 +349,24 @@ width:auto;
 padding:20px 0px;
 }
 
-.Games input{
-width:80%; 
-height:80%;
+
+.Games #gamebtn{
+width:75%; 
+height:75%;
 color:white;
 background-color: var(--nav_bg_color_active);
 box-shadow: 10px 10px var(--nav_bg_color_active), -10px -10px var(--nav_bg_color_active)
 ,10px -10px var(--nav_bg_color_active),  -10px 10px var(--nav_bg_color_active);
-transition: all .1s cubic-bezier(0.7,-0.01, 0.29, 0.98);
+transition: all .18s cubic-bezier(0.7,-0.01, 0.29, 0.98);
 z-index:2;
+padding:0; margin:0 0px;
 } 
 
-.Games input:hover{
-transform: scale(1.1) ;
+.Games #gamebtn:hover{
+transform: scale(1.15) ;
 z-index: 99;
+cursor: pointer;
 }
-
 
 /*Art photos*/
 
@@ -395,17 +375,12 @@ justify-content: center;
 align-items: center;
 text-align: center;
  margin: 0 auto;
-display:flex;
-flex-flow: row wrap;
-margin-top:-10px;
-width:fit-content;
-padding: 20px 0;
-height : 100%;
+ display:flex;
+ flex-wrap: wrap;
 -webkit-user-select: none; /* Safari */        
 -moz-user-select: none; /* Firefox */
 -ms-user-select: none; /* IE10+/Edge */
 user-select: none; /* Standard */
-
 }
 
 .Art-photos div {
@@ -415,6 +390,10 @@ width:auto;
 .Art-photos input{
 width:155px;
 height:155px;
+
+max-width:155px;max-height: 155px;
+min-width:155px;min-height: 155px;
+
 background-color: var(--nav_bg_color_active);
 color:white;
 margin-top:12px;
@@ -432,10 +411,7 @@ transition: all .02s ease-in-out;
  }
 }
 
-.Art-photos input:hover{
-transform: rotate(10deg);
-transform: scale(1.2) rotate(5deg);
-}
+
 
 /*Music covers*/
 .Music-photos {
@@ -536,8 +512,8 @@ transform: scale(1.05) rotate(1.5deg);
 
 /*Showlink buttons*/
 .Showlink-button{
-display: inline-block;
-text-align:left;
+
+text-align:center;
 color:white;
 text-decoration: none;
 padding:0px 30px;
@@ -551,10 +527,12 @@ user-select: none; /* Standard */
 margin:0 5%;
 box-shadow: 4px 4px var(--nav_bg_color_active), -4px -4px var(--nav_bg_color_active)
 ,4px -4px var(--nav_bg_color_active),  -4px 4px var(--nav_bg_color_active);
+transition: all .03s ease-in-out;
+
 }
 
 .Showlink-button:hover{
-transform: scale(1.05, 1.05);
+transform: scale(1.2, 1.2);
 cursor: pointer;
 }
 
@@ -752,4 +730,149 @@ transform: scale(1.2) rotate(5deg);
 
 AUDIO{
 display:none;
+}
+
+.Artbutton{
+
+width:var(--art-size); height: var(--art-size);
+
+background-color: var(--nav_bg_color_active);
+background-image : linear-gradient(to bottom, 
+              rgba(255,255,255, 0) 80%, 
+              rgba(85, 10, 117, 1) 100%);
+
+background-image: -moz-radial-gradient(circle, rgba(63,94,251,0) 53%, rgba(88,0,74,1) 100%);
+background-image: -webkit-radial-gradient(circle, rgba(63,94,251,0) 53%, rgba(88,0,74,1) 100%);
+background-image: radial-gradient(circle, rgba(63,94,251,0) 53%, rgba(88,0,74,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f5efb",endColorstr="#58004a",GradientType=1);
+color:white;
+margin-top:12px;
+margin-left:-1px;
+margin-right:9px;
+
+outline-color: var(--nav_bg_color_active);
+outline-width:10px;
+outline-style: solid;
+
+transition: all 2s ease-in-out;
+text-align: center;
+
+display: flex;
+justify-content: center;
+align-items: center;
+overflow: hidden;
+}
+
+.Artbutton #gamebtn{
+width:var(--art-size);
+height:var(--art-size);
+background:var(--nav_bg_color);
+max-width:var(--art-size);max-height: var(--art-size);
+min-width:var(--art-size);min-height: var(--art-size);
+
+animation: artbutton-scale-out 0.1s infinite;
+animation-fill-mode: forwards;
+animation-iteration-count: 1;
+}
+
+.Artbutton:hover #gamebtn{
+animation: artbutton-scale-in 0.5s infinite;
+animation-fill-mode: forwards;
+animation-iteration-count: 1;
+cursor:pointer;
+}
+
+.ArtTitle {
+text-align: center;
+position:absolute;
+font-size:120%;
+font-weight: bold;
+z-index: 20;
+transform: translate(0, calc(var(--art-size) / 2 - 50px) );
+  filter: opacity(0%);
+
+-webkit-text-stroke: .1px #000000;
+text-shadow: 0px 0px 10px #000000;
+} 
+
+.Artbutton:hover .ArtTitle{
+
+animation: arttitle-scale-in 0.5s infinite;
+-webkit-animation: arttitle-scale-in 0.5s infinite;
+-moz-animation: arttitle-scale-in 0.5s infinite;
+-ms-animation: arttitle-scale-in 0.5s infinite;
+-o-animation: arttitle-scale-in 0.5s infinite;
+
+animation-fill-mode: forwards;
+-webkit-animation-fill-mode: forwards;
+-moz-animation-fill-mode: forwards;
+-ms-animation-fill-mode: forwards;
+-o-animation-fill-mode: forwards;
+
+animation-iteration-count: 1;
+-webkit-animation-iteration-count: 1;
+-moz-animation-iteration-count: 1;
+-ms-animation-iteration-count: 1;
+-o-animation-iteration-count: 1;
+
+cursor:pointer;
+}
+
+@keyframes artbutton-scale-in {
+
+from {
+  transform: scale(1) rotate(0deg);
+  filter: opacity(100%) blur(0px);
+}
+
+to {
+  transform: scale(1.5) rotate(5deg);
+  filter: opacity(40%) blur(1px);
+}
+}
+
+@keyframes artbutton-scale-out {
+from {
+  transform: scale(1.5) rotate(5deg);
+  filter: opacity(40%) blur(1px);
+}
+
+to {
+  transform: scale(1) rotate(0deg);
+  filter: opacity(100%) blur(0px);
+}
+}
+
+@keyframes alpha_fade {
+0% {
+  filter: opacity(0%);
+}
+100%{
+  filter: opacity(100%);
+}
+}
+
+@-webkit-keyframes arttitle-scale-out {
+0% {
+  transform: translate(0,0);
+  filter: opacity(100%);
+}
+
+100% {
+  transform: translate(0, calc(var(--art-size) / 2 - 10px) );
+  filter: opacity(0%);
+}
+}
+
+@-webkit-keyframes arttitle-scale-in {
+
+0% {
+  transform: translate(0, calc(var(--art-size) / 2 - 10px) );
+  filter: opacity(0%);
+}
+
+100% {
+  transform: translate(0,0);
+  filter: opacity(100%);
+}
 }
